libcpu: riscv: fixed ARCH_RISCV_VECTOR issue && add test case for rvv_memcpy
description: Using the vector instruction set to trigger
an illegal instruction exception when ARCH_SISCV_VECTOR=y.

analysis: When initializing the thread stack,
the rt_cw_stack_init function did not enable VS for SSTATUS.

Solution: When ARCH_SISCV_VECTOR=y,
increment the initial value of sstatus by 0x600(SSTATUS_VS).

Testcase: use rvv_test for ARCH_RISCV_VECTOR

Signed-off-by: Liu Gui <kenneth.liu@sophgo.com>

--- a/bsp/cvitek/c920_big/.config
+++ b/bsp/cvitek/c920_big/.config
@@ -205,6 +205,9 @@ CONFIG_RT_USING_CACHE=y
 CONFIG_ARCH_MM_MMU=y
 CONFIG_ARCH_RISCV=y
 CONFIG_ARCH_RISCV_FPU=y
+CONFIG_ARCH_RISCV_VECTOR=y
+CONFIG_ARCH_VECTOR_VLEN_128=y
+# CONFIG_ARCH_VECTOR_VLEN_256 is not set
 CONFIG_ARCH_RISCV_FPU_D=y
 CONFIG_ARCH_RISCV64=y
 CONFIG_ARCH_USING_NEW_CTX_SWITCH=y
