--- a/bsp/cvitek/drivers/SConscript
+++ b/bsp/cvitek/drivers/SConscript
@@ -42,6 +42,9 @@ if GetDepend('BSP_ROOTFS_TYPE_CROMFS'):
     src += ['port/mnt_cromfs.c']
 elif GetDepend('BSP_ROOTFS_TYPE_DISKFS'):
     src += ['port/mnt_diskfs.c']
+elif GetDepend('BSP_ROOTFS_TYPE_ROMFS'):
+    src += ['port/mnt_romfs.c']
+    src += ['port/myromfs.c']
 
 if GetDepend('BSP_USING_SDH'):
     src += ['drv_sdhci.c']
