bsp: cvitek: add link addr for link.lds
1. add C920_BOOT_ADDR for boot
2. add TOTAL_MEMORY for memory size
3. add SOC mode and PCIe mode for AP

--- a/bsp/cvitek/c920_big/.config
+++ b/bsp/cvitek/c920_big/.config
@@ -1384,10 +1384,15 @@ CONFIG_BSP_UART_IRQ_BASE=41
 
 CONFIG_BSP_USING_SG2260=y
 CONFIG_C920_PLIC_PHY_ADDR=0x6E00000000
+CONFIG_C920_BOOT_ADDR=0x80200000
+CONFIG_TOTAL_MEMORY=0x2000000
 CONFIG_IRQ_MAX_NR=512
 CONFIG_BSP_GPIO_IRQ_BASE=26
 CONFIG___STACKSIZE__=8192
 CONFIG_SOC_TYPE_BM1690_AP=y
 CONFIG_BOARD_TYPE_SOPHGO_BM1690_AP=y
+# CONFIG_BOARD_TYPE_SOPHGO_BM1690_TP is not set
+CONFIG_BOOT_TYPE_FROM_SOC=y
+# CONFIG_BOOT_TYPE_FROM_PCIE is not set
 CONFIG_BSP_ROOTFS_TYPE_ROMFS=y
 # CONFIG_BSP_ROOTFS_TYPE_CROMFS is not set
