--- a/bsp/cvitek/c920_big/.config
+++ b/bsp/cvitek/c920_big/.config
@@ -118,7 +118,7 @@ CONFIG_RT_KLIBC_USING_VSNPRINTF_LOG10_TAYLOR_TERMS=4
 # CONFIG_RT_UTEST_TC_USING_KLIBC is not set
 # end of klibc options
 
-CONFIG_RT_NAME_MAX=8
+CONFIG_RT_NAME_MAX=16
 # CONFIG_RT_USING_ARCH_DATA_TYPE is not set
 # CONFIG_RT_USING_NANO is not set
 # CONFIG_RT_USING_SMART is not set
@@ -194,7 +194,7 @@ CONFIG_RT_USING_DEVICE_OPS=y
 # CONFIG_RT_USING_THREADSAFE_PRINTF is not set
 CONFIG_RT_USING_CONSOLE=y
 CONFIG_RT_CONSOLEBUF_SIZE=256
-CONFIG_RT_CONSOLE_DEVICE_NAME="uart0"
+CONFIG_RT_CONSOLE_DEVICE_NAME="uart2"
 CONFIG_RT_VER_NUM=0x50200
 CONFIG_RT_USING_STDC_ATOMIC=y
 CONFIG_RT_BACKTRACE_LEVEL_MAX_NR=32
@@ -205,9 +205,6 @@ CONFIG_RT_USING_CACHE=y
 CONFIG_ARCH_MM_MMU=y
 CONFIG_ARCH_RISCV=y
 CONFIG_ARCH_RISCV_FPU=y
-CONFIG_ARCH_RISCV_VECTOR=y
-CONFIG_ARCH_VECTOR_VLEN_128=y
-# CONFIG_ARCH_VECTOR_VLEN_256 is not set
 CONFIG_ARCH_RISCV_FPU_D=y
 CONFIG_ARCH_RISCV64=y
 CONFIG_ARCH_USING_NEW_CTX_SWITCH=y
@@ -1369,13 +1366,13 @@ CONFIG_RT_USING_ADT_REF=y
 # General Drivers Configuration
 #
 CONFIG_BSP_USING_UART=y
-CONFIG_BSP_USING_UART0=y
-CONFIG_BSP_UART0_RX_PINNAME="UART0_RX"
-CONFIG_BSP_UART0_TX_PINNAME="UART0_TX"
+# CONFIG_BSP_USING_UART0 is not set
 # CONFIG_BSP_USING_UART1 is not set
-# CONFIG_BSP_USING_UART2 is not set
+CONFIG_BSP_USING_UART2=y
+CONFIG_BSP_UART2_RX_PINNAME="UART2_RX"
+CONFIG_BSP_UART2_TX_PINNAME="UART2_TX"
 # CONFIG_BSP_USING_UART3 is not set
-CONFIG_BSP_UART_IRQ_BASE=41
+CONFIG_BSP_UART_IRQ_BASE=2
 # CONFIG_BSP_USING_WDT is not set
 # CONFIG_BSP_USING_TIMER is not set
 # CONFIG_BSP_USING_RTC is not set
@@ -1383,15 +1380,16 @@ CONFIG_BSP_UART_IRQ_BASE=41
 # end of General Drivers Configuration
 
 CONFIG_BSP_USING_SG2260=y
-CONFIG_C920_PLIC_PHY_ADDR=0x6E00000000
-CONFIG_C920_BOOT_ADDR=0x80200000
+CONFIG_C920_PLIC_PHY_ADDR=0x690c800000
+CONFIG_TPU_INDEX=0
+CONFIG_C920_BOOT_ADDR=0x1F00200000
 CONFIG_TOTAL_MEMORY=0x2000000
 CONFIG_IRQ_MAX_NR=512
 CONFIG_BSP_GPIO_IRQ_BASE=26
 CONFIG___STACKSIZE__=8192
-CONFIG_SOC_TYPE_BM1690_AP=y
-CONFIG_BOARD_TYPE_SOPHGO_BM1690_AP=y
-# CONFIG_BOARD_TYPE_SOPHGO_BM1690_TP is not set
+CONFIG_SOC_TYPE_BM1690_TP=y
+# CONFIG_BOARD_TYPE_SOPHGO_BM1690_AP is not set
+CONFIG_BOARD_TYPE_SOPHGO_BM1690_TP=y
 CONFIG_BOOT_TYPE_FROM_SOC=y
 # CONFIG_BOOT_TYPE_FROM_PCIE is not set
 CONFIG_BSP_ROOTFS_TYPE_ROMFS=y
