--- a/bsp/cvitek/c920_big/.config
+++ b/bsp/cvitek/c920_big/.config
@@ -1383,6 +1383,7 @@ CONFIG_BSP_USING_SG2260=y
 CONFIG_TPU_INDEX=0
 CONFIG_C920_PLIC_PHY_ADDR=0x690C800000
 CONFIG_C920_BOOT_ADDR=0x1F00200000
+CONFIG_C920_TPU_SYS_ADDR=0x6900000000
 CONFIG_TOTAL_MEMORY=0x2000000
 CONFIG_IRQ_MAX_NR=512
 CONFIG_BSP_GPIO_IRQ_BASE=26
