bsp: cvitek: add Mem for C920_big
1. set TOTAL_MEMORY from 0x2000000 to 0x4000000.
2. fix RT_HW_HEAP_END for TOTAL_MEMORY.
3. add libbm1690 for build.

--- a/bsp/cvitek/c920_big/Kconfig
+++ b/bsp/cvitek/c920_big/Kconfig
@@ -9,6 +9,7 @@ PKGS_DIR := packages
 source "$(RTT_DIR)/Kconfig"
 source "$PKGS_DIR/Kconfig"
 source "board/Kconfig"
+source "libbm1690/Kconfig"
 
 # 定义整个BSP形态
 config BSP_USING_SG2260
