--- a/bsp/cvitek/c920_big/.config
+++ b/bsp/cvitek/c920_big/.config
@@ -1379,12 +1379,18 @@ CONFIG_BSP_UART_IRQ_BASE=2
 # CONFIG_BSP_USING_SDH is not set
 # end of General Drivers Configuration
 
+#
+# TPU kernel lib
+#
+CONFIG_BM1690_LIB=y
+# end of TPU kernel lib
+
 CONFIG_BSP_USING_SG2260=y
 CONFIG_TPU_INDEX=0
 CONFIG_C920_PLIC_PHY_ADDR=0x690C800000
 CONFIG_C920_BOOT_ADDR=0x1F00200000
 CONFIG_C920_TPU_SYS_ADDR=0x6900000000
-CONFIG_TOTAL_MEMORY=0x2000000
+CONFIG_TOTAL_MEMORY=0x4000000
 CONFIG_IRQ_MAX_NR=512
 CONFIG_BSP_GPIO_IRQ_BASE=26
 CONFIG___STACKSIZE__=8192
